syntax = "proto3";
package switchgate.intents;
option go_package = "github.com/switchgate/switchgate-core/src/core-engine/pkg/proto/gen/intents;intents";

message Party {
  string msisdn = 1;
  string telco = 2;
}

message CreateIntentRequest {
  Party source = 1;
  Party destination = 2;
  string assetType = 3;
  string amount = 4; // decimal as string
  string bundleId = 5; // optional
  string idempotencyKey = 6;
  string partnerId = 7;
}

message FeeQuote {
  string feePercent = 1;
  string feeAmount = 2;
  string netAmount = 3;
}

message CreateIntentResponse {
  string intentId = 1;
  string status = 2; // PENDING_PIN
  FeeQuote feeQuote = 3;
  string expiresAt = 4; // ISO8601
}

message SubmitPinRequest {
  string intentId = 1;
  string telcoPin = 2;
}

message SubmitPinResponse {
  string status = 1; // OTP_SENT
  string otpChannel = 2;
  string otpExpiresAt = 3;
}

message VerifyOtpRequest {
  string intentId = 1;
  string otpCode = 2;
}

message VerifyOtpResponse {
  string status = 1; // DEBIT_CONFIRMED
  string debitReference = 2;
  string reservedAmount = 3;
}

message FinalizeRequest {
  string intentId = 1;
}

message FinalizeResponse {
  string status = 1; // COMPLETED
  string transactionId = 2;
  string receiptJson = 3;
  repeated string ledgerRefs = 4;
}

service IntentService {
  rpc CreateIntent(CreateIntentRequest) returns (CreateIntentResponse);
  rpc SubmitPin(SubmitPinRequest) returns (SubmitPinResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);
  rpc Finalize(FinalizeRequest) returns (FinalizeResponse);
}